# base-library

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: readme.md
src/baselibrary/api/: request.py
src/baselibrary/common/: validate.py
src/baselibrary/file/: check.py  validate.py
src/baselibrary/folder/: check.py  helper.py  validate.py
src/baselibrary/logging/: logger.py
src/baselibrary/string/: check.py  validate.py
