[build-system]
requires = ["setuptools>=80.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "baselibrary"
version = "0.0.1"
description = "Base library is a collection of all the reused common code."
readme = "src/readme.md"
requires-python = ">=3.11"
authors = [
  { name = "KurianKevin", email = "kuriankevin0024@gmail.com" }
]
license = "MIT"
dependencies = ["requests>=2.32"]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["pytest>=8.4"]

[project.urls]
"Homepage" = "https://github.com/kuriankevin0024/base-library"

[tool.setuptools.packages.find]
where = ["src"]
