[build-system]
requires = ["setuptools>=80.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "baselibrary"
version = "0.0.2"
description = "Base library is a collection of all the reused common code."
readme = "src/readme.md"
requires-python = ">=3.13"
authors = [
  { name = "KurianKevin", email = "kuriankevin0024@gmail.com" }
]
license = "MIT"
dependencies = ["requests>=2.32", "urllib3>=2.4.0"]
classifiers = [
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = ["pytest>=8.4"]

[project.urls]
"Homepage" = "https://github.com/kuriankevin0024/base-library"

[tool.setuptools.packages.find]
where = ["src"]
